# MultiAgent-Research-Ideator

./: .gitignore  README.md  pyproject.toml
multiagent_research_ideator/prompts/: prompts_persona.json  self_revise_prompt.txt
multiagent_research_ideator/src/: analyze_ideas_semantic_similarity.py  combine_proposals.py  dedup_ideas.py  experiment_plan_gen.py  grounded_idea_gen.py  lit_review.py  lit_review_tools.py  merge_seed_ideas.py  metric_dominance_n.py  tournament_ranking.py  utils.py
scripts/: evaluate_ideas.sh  generate_ideas_and_dedup.sh  run_lit_review.sh
