[project]
name = "multiagent-research-ideator"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.57.1",
    "nltk>=3.9.1",
    "numpy>=2.3.1",
    "openai>=1.93.0",
    "retry>=0.9.2",
    "sentence-transformers>=5.0.0",
    "tqdm>=4.67.1",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.12.2",
]
